--- a/layout.css
+++ b/layout.css
@@ -1,6 +1,16 @@
 .layout-cabecalho {
     height: 60px;
     border-bottom: 1px solid #ccc;
+
+    background-color: #fff;
+}
+
+.layout-cabecalho--home {
+    position: fixed;
+    top: 0;
+    left: 0; 
+    right: 0;
+    z-index: 9999;
 }
 
 .layout-cabecalho img {
