--- a/componentes.css
+++ b/componentes.css
@@ -63,9 +63,11 @@
 \*-----------------------------*/
 .botao {
     display: inline-block;
+    padding: 0.8em 1.2em;
     background-color: #bbb;
     color: #fff;
-    padding: 0.8em 1.2em;
+    line-height: normal;
+    font-size: 1em;
     text-decoration: none;
 }
 
@@ -75,11 +77,12 @@
     color: #fff;
 }
 
-.botao--assinar {
+.botao--assinar, .botao--login {
     background-color: #127d00;
 }
 
-.botao--assinar:hover, .botao--assinar:focus {
+.botao--assinar:hover, .botao--assinar:focus,
+.botao--login:hover, .botao--login:focus {
     background-color: #0e6400;
 }
 
@@ -212,4 +215,35 @@
     .botao-chaveador {
         display: none;
     }
+}
+
+/*-----------------------------*\
+   MENU
+\*-----------------------------*/
+.menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+
+    width: 200px;
+    margin: 0;
+    padding: 20px;
+    border-right: 1px solid #eee;
+
+    font-size: 1.4rem;
+
+    background-color: #fbfbfb;
+
+    list-style: none;
+}
+
+.menu__item {
+    display: block;
+
+    line-height: 3;
+}
+
+.menu__item--botao {
+    margin-top: 20px;
 }
