--- a/componentes.css
+++ b/componentes.css
@@ -221,21 +221,31 @@
    MENU
 \*-----------------------------*/
 .menu {
+    margin: 0;
+
+    font-size: 1.4rem;
+
+    list-style: none;
+}
+
+@media(max-width: 991px) {
+
+    .menu {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
 
+    display: none;
     width: 200px;
-    margin: 0;
     padding: 20px;
     border-right: 1px solid #eee;
 
-    font-size: 1.4rem;
-
     background-color: #fbfbfb;
+}
 
-    list-style: none;
+.menu--exibindo {
+display: block;
 }
 
 .menu__item {
@@ -246,4 +256,17 @@
 
 .menu__item--botao {
     margin-top: 20px;
+    }
+}
+
+@media(min-width: 992px) {
+    
+    .menu__item {
+        display: inline-block;
+        padding-right: 20px;
+    }
+
+    .menu__item:last-of-type {
+        padding-right: 0px;
+    }
 }
