--- a/layout.css
+++ b/layout.css
@@ -20,6 +20,7 @@
 
 .layout-chamada {
     padding: 80px 0;
+    margin-top: 60px;
 
     background-color: #7ab55c;
 }
@@ -42,5 +43,9 @@
 .layout-planos .row > div:not(.ultima-coluna) {
     margin-bottom: 40px;
     }
+}
+
+.layout-assinatura {
+    padding: 40px 0;
 }
 
